only modeltree part is missing..

--- a/mg14proc.tex
+++ b/mg14proc.tex
@@ -51,7 +51,7 @@
 \newcommand{\icite}[1]{Ref.~\refcite{#1}} % *I*nline citation
 \newcommand{\scite}[1]{\cite{#1}} % end of *S*entence citation
 
-\newcommand{\figref}[1]{Figure~\ref{fig:#1}}
+\newcommand{\figref}[1]{Fig.~\ref{fig:#1}}
 
 %\newcommand{\fref}[1]{\ref{fig:#1}}
 %\newcommand{\sref}[1]{\ref{sec:#1}}
@@ -84,11 +84,11 @@
 \title{Lensing Galaxies in the CFHT Legacy Survey}
 
 \author{
-  Rafael Küng$^*$, Prasenjit Saha
+  Rafael K\"ung$^*$, Prasenjit Saha
 }
 \address{
-Physik-Institut, University of Zürich,\\
-Winterthurerstrasse 190, 8057 Zürich, Switzerland\\
+Physik-Institut, University of Zurich,\\
+Winterthurerstrasse 190, 8057 Zurich, Switzerland\\
 $^*$E-mail: rafael\_kueng@uzh.ch
 }
 \author{
@@ -157,7 +157,7 @@ $^*$E-mail: rafael\_kueng@uzh.ch
 
 \begin{abstract}
 In SpaceWarps, a community of over 30'000 volunteers searched for lensed candidates
-in the CFHT Legacy Survey. About 60 new lens candidates have been identified, along
+in the CFHT Legacy Survey. 59 new lens candidates have been identified, along
 with rediscovery of 60\% of the previously-known candidates.
 
 Models of most of these lens candidates were produced collaboratively by a small
@@ -172,7 +172,7 @@ presented.
 \end{abstract}
 
 
-\keywords{Gravitational Lensing: strong; methods: numerical; MG14 Proceedings}
+\keywords{Gravitational Lensing: strong; methods: numerical}
 
 
 \bodymatter
@@ -183,93 +183,72 @@ presented.
 \section{Introduction}
 
 Gravitational lenses (GL), prediced by A. Einstein's General Relativity in 1915 have become an important tool in cosmology.
-Strong lensing can be used to infer the distribution of dark matter around galaxies\cite{Koopans2009}, to find the relation between stars and dark matter\cite{Leier2011} or to infer cosmological parameters\cite{Sereno2014}.
+Strong lensing can be used to infer the distribution of dark matter around galaxies \icite{Koopans2009}, to find the relation between stars and dark matter \icite{Leier2011} or to infer cosmological parameters \icite{Sereno2014}.
 
 Current surveys resulted in more than 400 known lenses.
-For example in the Space Warps project\cite{sw1}, carried out on the 170 square degree Canada--France--Hawaii Telescope Legacy Survey (CFHTLS), over 30'000 volunteers found 59 candidate lenses\cite{sw2}.
+For example in the \sw project \icite{sw1}, carried out on the 170 square degree Canada--France--Hawaii Telescope Legacy Survey (CFHTLS), over 30'000 volunteers found 59 candidate lenses \icite{sw2}.
 
 As a rough estimate, this results in one lens every few square degree.
-Imaging surveys under way will increase the observation area by a factor of ten and next generation surveys starting in the twenty-twenties will increase the resolution leading to another factor of ten.\cite{Marshall2005,OguriMarshall2010}
+Imaging surveys under way will increase the observation area by a factor of ten and next generation surveys starting in the twenty--twenties will increase the resolution leading to another factor of ten.\scite{Marshall2005,OguriMarshall2010}
 This raises expectations that the number of lenses will increase a hundred fold, leading to an order of 10'000 lenses over the next 10 years.
 Thats of order one potential lens detection per hour for the next 10 years.
 
-Software robots in combination with the citizen science project \sw are proposed to classify that amount of raw data and identify possible lens candidates.\cite{Marshall2009,sw1}
-For the modelling of the mass distribution of the lenses --- an essential part of any research involving lenses --- we propose to involve citizen scientists as well and present a concept, that has already been implemented and tested\cite{Kueng2015}: \spl.
+Software robots in combination with the citizen science project \sw are proposed to classify that amount of raw data and identify possible lens candidates.\scite{Marshall2009,sw1}
+For the modelling of the mass distribution of the lenses --- an essential part of any research involving lenses --- we propose to involve citizen scientists as well and present a concept, that has already been implemented and tested \icite{Kueng2015}: \spl.
 
 
+\section{Theoretical Background and Implementation}
 
+This section is a short summary from \icite{Kueng2015} and recaps the basic concepts of \spl.
+It follows the formaulation of Fermat's principle by \icite{Blandford1986}.
 
-
-
-
-
-
-
-\begin{itemize}
-  \item NOW:
-  \item CHFT LS: 150 deg$^2$
-  \item 50000 volunteers, 11mio classifications
-  \item 59 candidates found
-  \item 1 lens every few deg$^2 $
-  \item FUTURE:
-  \item DES Pan-STARRS (x10); LSST, Euclid (2020+, again x10)
-  \item leads to 10'000 lenses over next 10 years
-  \item order of one per hour
-\end{itemize}
-
-Detecting lenses: robots + \sw
-
-post processing (modelling): robots? no; citicen science!
-
-
-
-
-
-Theory (short summary from \icite{Kueng2015})
-
-Arrival time / Time delay.
+Consider a lens at redshift $z_L$ away from the observer with a planar mass distribution $\propto\kappa(x,y)$, the convergence.
+Imagine a light source at distance $z_s$, behind the point $(x_s,y_s)$ on the lens.
+A photon flying from the source through the lens at $(x,y)$ to the observer will have an increased light travel time compared to the direct way through $(x_s,y_s)$.
+The time delay can be expressed as two parts:
 \begin{equation}  \label{eq:tarriv}
-t(x,y) = t_{\rm geom} + t_{\rm grav}
+t(x,y) = t_{\rm geom} + t_{\rm grav} ,
 \end{equation}
-
-With the geometrical time delay / change of flight path
+where the first part represents a geometrical time delay,
 \begin{equation} \label{eq:tgeom}
 \tgeom(x,y) \propto (x-x_s)^2 + (y-y_s)^2 ,
 \end{equation}
-
-And the delay due to general relativity
+and the second the delay due to general relativity:
 \begin{equation} \label{eq:tgrav}
 \tgrav(x,y) = \left\langle \tgrav(x_\subcirc,y_\subcirc) \right\rangle
               + (1+z_L) \frac{2G}{c^3} M(x_\subbullet,y_\subbullet) \,.
 \end{equation}
 
-t(x,y) is an arrival time countour
-can be modelled by skeching self intersecting contour lines.
-Sampling techique described in detail in \icite{Lubini2012}.
-A spaghetti lens model is en ensemble of 200 models, uncertainty is the range covered by the ensemble.
+The arrival time surface $t(x,y)$ applies to virtual photons.
+Real photons take paths where $t(x,y)$ is stationary, due to Fermat's principle.
+This arrival time surface has an exact relation to the lens-mass distribution und the source position.
+A simple sketch of the surface (location of minima, maxima and the saddlepoint self intersection contour) is thus a sufficient starting point for finding a mass distribution $\kappa(x,y)$. The exact sampling techique is described in detail in \icite{Lubini2012}.
+What is called a \spl model is actually an ensemble of 200 models, each a possible solution, and the uncertainty is the range of parameters covered by all the models of the whole ensemble.
 
 
+\section{Analysing the \sw Candidates}
 
+(too tired to write any good text now..
+something about that each candidate got modlelled multiple times, models were improved, and finally the best was selected) Sample tree of models is depicted in \figref{tree}
 
-\section{Creating and Selecting Modells}
-
-describe modelling tree
+for this analysis, models from the tree were selected manually by inspection by PS, RK and the community.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.8\columnwidth]{img/modeltree}
+  \includegraphics[width=\columnwidth]{img/modeltree}
   \caption{
-    modelltree
+    Tree of models for the lens candidate SW5 (J143454.4+522850)
   }
   \label{fig:tree}
 \end{figure}
 
-for this analysis, models from the tree were selected manually by inspection by PS, RK and the community.
 
 
-\section{Determing Lensing and Stellar Mass}
+\subsection{Determing lensing and stellar mass}
 
-The lensing mass can directly be extracted from the generated models, as the mass distribution is the key feature that is being modelled\cite{Kueng2015}.
+In a next step, we extracted the total lensing mass and the stellar mass and compared the ratio, to get a first overview over the condidates and to reject possible non--lenses.
+
+The lensing mass can directly be extracted from the generated models, as the mass distribution is the key feature that is being modelled \icite{Kueng2015}.
 Since a single model actually consists of an ensemble of a number of models, where each one is a possible configuration, we get an approximation of the error by selecting the models with minimal/ maximal total mass as lower / upper bounds for the errors.
 
 We estimated the stellar mass with:
@@ -277,17 +256,9 @@ We estimated the stellar mass with:
   \Mstel = 10^{0.4 [\operatorname{mag}(z_\text{ph}) - m_\text{i}]}
 \]
 where
-$z_\text{ph}$ and $m_\text{i}$ are the photometric redshift and luminosity given in [\refcite{sw2}] and 
-$\operatorname{mag}()$ is a function obtained by interpolating data of SDSS-i magnitude (AB) of 1\Msun and actual mass vs redshift BC03 models\cite{Bruzual2003}, Salpeter Initial Mass Function and assumes ``vanilla cosmology'' ($\Omega_\text{M}=0.3$, $\Omega_\Lambda=0.7$).\cite{Ferreras2010}
+$z_\text{ph}$ and $m_\text{i}$ are the photometric redshift and luminosity given in \icite{sw2} and 
+$\operatorname{mag}()$ is a function obtained by interpolating data of SDSS-i magnitude (AB) of 1\Msun and actual mass vs redshift BC03 models \icite{Bruzual2003}, Salpeter Initial Mass Function and assumes ``vanilla cosmology'' ($\Omega_\text{M}=0.3$, $\Omega_\Lambda=0.7$).\scite{Ferreras2010}
 For the lower bound of the error we assumed a young population (0.5 Gyr), whereas for the upper one of 2 Gyr.
-
-
-\section{Conclusions}
-
-In this work we use the method presented and tested\cite{Kueng2015} to create models of all lens candidates discovered by the first run of \sw\cite{sw2}.
-We determine the total (lensing) mass \Mlens of the candidates using the generated models and the stellar mass \Mstel using an interpolation of a Salpeter Initial Mass Function\cite{Salpeter1955} with redshifts and luminosity magnitudes given in [\refcite{sw2}].
-We then plot the masses of the candidates and observe in \figref{frac} that the stellar mass fraction is of the order of 20\%, with decreasing trend for the most massive galaxies, as expected for early type galaxies.
-We identify outliers with very low stellar masses that need further inspection.
 
 \begin{figure}
   \centering
@@ -297,8 +268,16 @@ We identify outliers with very low stellar masses that need further inspection.
 \end{figure}
 
 
+\section{Conclusions}
+
+In this work we use the method presented and tested \icite{Kueng2015} to create models of all lens candidates discovered by the first run of \sw\icite{sw2}.
+We determine the total (lensing) mass \Mlens of the candidates using the generated models and the stellar mass \Mstel using an interpolation of a Salpeter Initial Mass Function \icite{Salpeter1955} with redshifts and luminosity magnitudes given in \icite{sw2}.
+We then plot the masses of the candidates and observe in \figref{frac} that the stellar mass fraction is of the order of 20\%, with decreasing trend for the most massive galaxies, as expected for early type galaxies.
+We identify outliers with very low stellar masses that need further inspection.
+
+
 \section*{Acknowledgments}
-RK thanks the Candoc Forschungskredit of the University of Zurich for their support of this work.
+RK thanks the Candoc Forschungskredit of the University of Zurich for the support of this work.
 
 \bibliographystyle{ws-procs975x65}
 \bibliography{ms}
