--- a/ms.bib
+++ b/ms.bib
@@ -1,7 +1,7 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF8
 
-@ARTICLE{1986ApJ...310..568B,
+@ARTICLE{Blandford1986,
   author = {{Blandford}, R. and {Narayan}, R.},
   title = {{Fermat's principle, caustics, and the classification of gravitational
 	lens images}},
