--- a/mg14proc.tex
+++ b/mg14proc.tex
@@ -144,7 +144,8 @@ $^*$E-mail: rafael\_kueng@uzh.ch
 
 
 \begin{abstract}
-In SpaceWarps, a community of over 30,000 volunteers searched for lensed candidates in the CFHT Legacy Survey.
+In SpaceWarps, a community of over 30\,000 % note: SI rules forbid to use , or . for separation of 1000th (9. conference, 1948, Resolution 7) http://www.bipm.org/en/CGPM/db/9/7/
+volunteers searched for lensed candidates in the CFHT Legacy Survey.
 59 new lens candidates have been identified, along with rediscovery of 60\% of the previously-known candidates.
 
 Models of most of these lens candidates were produced collaboratively by a small community of lens enthusiasts from the volunteer community.
@@ -163,27 +164,27 @@ We present lens models of some of these newly discovered lens candidates, along 
 
 \section{Introduction}
 
-Gravitational lenses (GL), prediced by A. Einstein's General Relativity in 1915 have become an important tool in cosmology.
+Gravitational lenses, predicted by A. Einstein's General Relativity in 1915 have become an important tool in cosmology.
 Strong lensing can be used to infer the distribution of dark matter around galaxies \ccite{Koopans2009}, to find the relation between stars and dark matter \ccite{Leier2011} or to infer cosmological parameters \ccite{Sereno2014}.
 
 Current surveys resulted in more than 400 known lenses.
-For example in the \sw project, carried out on the 170 square degree Canada--France--Hawaii Telescope Legacy Survey (CFHTLS), over 30,000 volunteers found 59 candidate lenses.\scite{sw1,sw2}
+For example in the \sw project, carried out on the 170 square degree Canada--France--Hawaii Telescope Legacy Survey (CFHTLS), over 30\,000 volunteers found 59 candidate lenses.\scite{sw1,sw2}
 
 As a rough estimate, this results in one lens every few square degree.
 Imaging surveys under way will increase the observation area by a factor of ten and next generation surveys starting in the twenty--twenties will increase the resolution leading to another increase by a factor of ten.\scite{Marshall2005,OguriMarshall2010}
-This raises expectations that the number of lenses will increase a hundred fold, leading to an order of 10,000 lenses over the next 10 years.
+This raises expectations that the number of lenses will increase a hundred fold, leading to an order of 10\,000 lenses over the next 10 years.
 That's of order one potential lens detection per hour for the next 10 years.
 
 Software robots in combination with the citizen science project \sw are proposed to classify that amount of raw data and identify possible lens candidates.\scite{Marshall2009,sw1}
 For the modelling of the mass distribution of the lenses --- an essential part of any research involving lenses --- we propose to involve citizen scientists as well and present a concept, that has already been implemented and tested: \spl.\scite{Kueng2015}
 
 
-\section{Theoretical Background and Implementation}
+\section{Theoretical background and implementation}
 
 This section is a short summary from \icite{Kueng2015} and recaps the basic concepts of \spl.
-It follows the formaulation of Fermat's principle as described by \icite{Blandford1986}.
+It follows the formulation of Fermat's principle as described in \icite{Blandford1986}.
 
-Consider a lens at redshift $z_L$ away from the observer with a planar mass distribution $\propto\kappa(x,y)$, the convergence.
+Consider a lens at redshift $z_L$ away from the observer with a planar mass distribution proportional to $\kappa(x,y)$, the convergence.
 Imagine a light source at distance $z_s$, behind the point $(x_s,y_s)$ on the lens.
 A photon flying from the source through the lens at $(x,y)$ to the observer will have an increased light travel time compared to the direct way through $(x_s,y_s)$.
 The time delay can be expressed as two parts:
@@ -203,11 +204,11 @@ and the second the delay due to general relativity:
 The arrival time surface $t(x,y)$ applies to virtual photons.
 Real photons take paths where $t(x,y)$ is stationary, due to Fermat's principle.
 This arrival time surface has an exact relation to the lens-mass distribution and the source position.
-A simple sketch of this surface (i.e. the location of minimas, maximas and saddle points, and the self intersection contours though a saddle point) is thus a sufficient starting point for finding a lensing mass distribution $\kappa(x,y)$. The exact sampling techique is described in detail in \icite{Lubini2012}.
-What is called a \spl model is actually an ensemble of 200 models, each a possible solution to the constraints, and the uncertainty is the range of parameters covered by all the models of the whole ensemble.
+A simple sketch of this surface (i.e. the location of minima, maxima and saddle points, and the self intersection contour though saddle points) is thus a sufficient starting point for finding a lensing mass distribution $\kappa(x,y)$. Further details about the Metropolis-Hastings sampling technique are described in \icite{Lubini2012}.
+What is called a \spl model is actually an ensemble of 200 models, each a possible solution to the constraints. The uncertainty is the range of parameters covered by all the models of the whole ensemble.
 
 
-\section{Analysing the \sw Candidates}
+\section{Analysing the \sw candidates}
 
 (too tired to write any good text now..
 something about that each candidate got modlelled multiple times, models were improved, and finally the best was selected) Sample tree of models is depicted in \figref{tree}
